# rules_python_path

./: README.md  WORKSPACE
pw_transfer/: BUILD.bazel  transfer.proto
pw_transfer/py/: BUILD.bazel
pw_transfer/py/pw_transfer/: foo.py
pw_transfer/py/tests/: foo_test.py
